[package]
name = "bikikimk2-net-monitoring"
version = "1.0.0"
authors = ["stouma915"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.10.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
serenity = { version = "0.10.10", features = ["framework", "standard_framework"] }
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }