[package]
name = "bikikimk2-net-monitoring"
version = "1.0.0"
authors = ["stouma915"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
once_cell = "1.10.0"
reqwest = { version = "0.11.10", features = ["json"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
serenity = { version = "0.10.10", features = ["framework", "standard_framework"] }
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }
tokio-cron-scheduler = "0.5.0"